:sparkles: Feat: Add audio converters endpoints implementing swagger
